# plmMSA

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  PLAN_TEMPLATES_REALIGN.md  README.md  docker-compose.yml  pyproject.toml  settings.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: flash_sinkhorn.py  run_regression.py
docs/: cloudflare-tunnel.md  maintenance.md  submitting-msa.md  templates-realign.md  warming-weights.md
services/align/: Dockerfile
services/api/: Dockerfile
services/embedding/: Dockerfile
services/prometheus/: alerts.yml  prometheus.yml  queries.md
services/vdb/: Dockerfile
services/worker/: Dockerfile
src/plmmsa/: __main__.py  config.py  errors.py  metrics.py  request_context.py
src/plmmsa/admin/: __init__.py  routes.py  tokens.py
src/plmmsa/align/: __main__.py  base.py  binary.py  otalign.py  otalign_dp.py  plm_blast.py  plmalign.py  registry.py  score_matrix.py  server.py  sinkhorn.py  sinkhorn_flash.py  sinkhorn_torch.py  torch_score_matrix.py
src/plmmsa/api/: __init__.py  auth.py  health.py  metrics.py  middleware.py
src/plmmsa/api/public/: app.js  index.html  styles.css
src/plmmsa/api/routes/: colabfold.py  v1.py  v2.py
src/plmmsa/embedding/: __main__.py  server.py  shard_store.py
src/plmmsa/jobs/: __init__.py  models.py  result_cache.py  store.py
src/plmmsa/pipeline/: __init__.py  a3m.py  fetcher.py  orchestrator.py  paired.py
src/plmmsa/plm/: ankh_cl.py  ankh_large.py  base.py  esm1b.py  prott5.py  registry.py
src/plmmsa/templates/: __init__.py  a3m_parser.py  header.py  pipeline.py  render.py  transport.py
src/plmmsa/tools/: build_sequence_cache.py  build_shard_index.py
src/plmmsa/vdb/: __main__.py  base.py  faiss_vdb.py  registry.py  server.py
src/plmmsa/worker/: __main__.py
src/procl/model/: ankh.py
src/procl/model/head/: convbert.py
src/procl/model/output/: cloutput.py
tests/: conftest.py  test_admin_routes.py  test_admin_tokens.py  test_align_binary.py  test_align_otalign.py  test_align_plm_blast.py  test_align_plmalign.py  test_align_registry.py  test_align_score_builders.py  test_align_score_matrix.py  test_align_server.py  test_align_sinkhorn_flash.py  test_align_torch_builder.py  test_api_align.py  test_api_colabfold.py  test_api_embed.py  test_api_limits.py  test_api_metrics.py  test_api_msa.py  test_api_ratelimit.py  test_api_search.py  test_api_templates_realign.py  test_embedding_cache.py  test_embedding_embed_by_id.py  test_embedding_server.py  test_health.py  test_jobs_store.py  test_otalign_behavior.py  test_otalign_real_embeddings.py  test_pipeline_a3m.py  test_pipeline_a3m_fixture_roundtrip.py  test_pipeline_cross_plm.py  test_pipeline_fetcher.py  test_pipeline_multi_model.py  test_pipeline_orchestrator.py  test_pipeline_paired.py  test_pipeline_redis_fetcher.py  test_pipeline_shard_fetch.py  test_plm_ankh_cl.py  test_plm_registry.py  (+14 more)
tests/fixtures/: example_a3m.txt
tests/fixtures/casp15/: T1120.fasta  T1132.fasta  example_hits.fasta  expected_stats.json
